<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF000000"
    tools:context=".view.Home2">

    <!-- Introductory text -->

    <!-- Button to take a new photo using camera -->

    <TextView
        android:id="@+id/tvIntro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:paddingBottom="24dp"
        android:text="@string/intro_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCamera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/take_photo"

        android:background="@drawable/round_border1"

        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/tvIntro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="16dp"/>

    <!-- Button to choose an image from the gallery -->
    <Button
        android:id="@+id/btnGallery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/choose_gallery"
        android:background="@drawable/round_border2"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/btnCamera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="12dp"/>

    <!-- Progress indicator (hidden by default) -->
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/btnGallery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"/>

    <!-- ImageView to display the photo (annotated with stars) -->
    <ImageView
        android:id="@+id/imageViewd"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image_content_desc"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/btnGallery"
        app:layout_constraintBottom_toTopOf="@id/starListView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <VideoView
        android:id="@+id/videoGifScreenLogoStar"
        android:layout_width="470dp"
        android:layout_height="280dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewd"
        app:layout_constraintVertical_bias="1.0" />

    <ListView
        android:id="@+id/starListView"
        android:layout_width="349dp"
        android:layout_height="185dp"
        android:layout_marginTop="300dp"
        android:layout_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/btnGallery"
        tools:layout_editor_absoluteX="41dp" />


</androidx.constraintlayout.widget.ConstraintLayout>