<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="click me here"
            android:id="@+id/title"
            android:padding="15dp"
            android:textSize="16dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/purple_700">

        </TextView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/rl_title_line">


        </RelativeLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Description"
            android:visibility="gone"
            android:id="@+id/description"
            android:padding="15dp"
            android:textSize="13dp"
            android:gravity="center"

            android:textStyle="bold"
            android:textColor="@color/white">

        </TextView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/rl_description_line"
            android:visibility="gone">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/AboutTheApp"
                android:visibility="gone"
                android:gravity="center"
                android:textAlignment="center"

                android:id="@+id/whatIsMesamchimABOUT"
                android:padding="15dp"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@color/white">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/HowToDetectStars"
                android:visibility="gone"
                android:gravity="center"
                android:id="@+id/DetailAppABOUT"
                android:padding="15dp"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/white">

            </TextView>

            <TextView
                android:id="@+id/ContactUsABOUT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/MoreInformation"
                android:visibility="visible"
                android:autoLink="web"
                android:clickable="true"
                android:linksClickable="true"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@android:color/holo_blue_light" />



        </RelativeLayout>



    </LinearLayout>





</RelativeLayout>